@@ -619,6 +619,8 @@ matrix(c("!", "hexmode",
          "solve", "qr",
          "sort", "POSIXlt",
          "sort", "default",
+         "sort_by", "data.frame",
+         "sort_by", "default",
          "split", "Date",
          "split", "POSIXct",
          "split", "data.frame",
